--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="ThinkIT" />
 
-    <title>Kato Shinya</title>
+    <title>Kato Shinya / 加藤 真也</title>
 
     <link
       rel="stylesheet"
@@ -68,7 +68,6 @@
 
     <section id="bio" class="about me" name="bio">
       <div class="section-title">
-        <h2 class="waypoint" data-animation="slide-in-left">BIOGRAPHY</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>About Me</h1>
       </div>
@@ -80,34 +79,16 @@
             </a>
 
             <h1>Kato Shinya</h1>
-            <h2>- Full Stack Web Developer -</h2>
+            <h2>- Software Developer -</h2>
           </header>
 
           <div class="profile-bio">
-            <p>Hello there!</p>
+            <p>Hey what's up?</p>
             <p class="text-center">
-              I'm a full-stack Web Developer who is specialized in designing and creating Java-based
-              web applications and business improvement tools.
+              I'm an author and founder of Batch.dart. Experienced with many languages, and an
+              enthusiastic developer on Dart, Flutter, and Google Open Source.
             </p>
           </div>
-
-          <ul class="profile-social-links">
-            <li>
-              <a href="https://github.com/myConsciousness" target="_blank">
-                <div class="color-github fab fa-github"></div>
-              </a>
-            </li>
-            <li>
-              <a href="https://instagram.com/thinkit_shinya" target="_blank">
-                <div class="color-instagram fab fa-instagram"></div>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/thinkit_shinya" target="_blank">
-                <div class="color-twitter fab fa-twitter"></div>
-              </a>
-            </li>
-          </ul>
         </aside>
       </div>
     </section>
@@ -117,7 +98,6 @@
 
       <div class="container">
         <div class="section-title">
-          <h2 class="waypoint" data-animation="slide-in-left">SKILL</h2>
           <div
             class="header-divide-black-center mb-5 waypoint"
             data-animation="slide-in-left"
@@ -159,7 +139,6 @@
       <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="ffffff"></div>
 
       <div class="section-title">
-        <h2 class="waypoint" data-animation="slide-in-left">MIND</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>Philosophy</h1>
       </div>
@@ -172,7 +151,6 @@
       <div class="relaxing-waves-container" wave-background="fff" wave-color="bfbfbf"></div>
 
       <div class="section-title">
-        <h2 class="waypoint" data-animation="slide-in-left">PORTFOLIO</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>Gallery</h1>
       </div>
