--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
     />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/skill.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/mind.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/data-animation.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/preloader.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/bio.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/portfolio.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/font.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/index.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/navigation.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/profile-card.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/social-logo-color.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/barfiller.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/contact.css" />
+    <link rel="stylesheet" href="./src/css/skill.css" />
+    <link rel="stylesheet" href="./src/css/mind.css" />
+    <link rel="stylesheet" href="./src/css/data-animation.css" />
+    <link rel="stylesheet" href="./src/css/relaxing-waves.css" />
+    <link rel="stylesheet" href="./src/css/shooting-star.css" />
+    <link rel="stylesheet" href="./src/css/preloader.css" />
+    <link rel="stylesheet" href="./src/css/bio.css" />
+    <link rel="stylesheet" href="./src/css/portfolio.css" />
+    <link rel="stylesheet" href="./src/css/font.css" />
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/navigation.css" />
+    <link rel="stylesheet" href="./src/css/profile-card.css" />
+    <link rel="stylesheet" href="./src/css/social-logo-color.css" />
+    <link rel="stylesheet" href="./src/css/barfiller.css" />
+    <link rel="stylesheet" href="./src/css/contact.css" />
   </head>
   <body>
     <div id="preloder">
@@ -75,7 +75,7 @@
         <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
           <header>
             <a href="https://github.com/myConsciousness">
-              <img src="./src/org/thinkit/web/img/me.png" />
+              <img src="./src/img/me.png" />
             </a>
 
             <h1>Kato Shinya</h1>
@@ -246,13 +246,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
-    <script src="./src/org/thinkit/web/js/relaxingWaves.js"></script>
-    <script src="./src/org/thinkit/web/js/jquery.barfiller.js"></script>
-    <script src="./src/org/thinkit/web/js/barFiller.js"></script>
-    <script src="./src/org/thinkit/web/js/mindFiller.js"></script>
-    <script src="./src/org/thinkit/web/js/portfolioFiller.js"></script>
-    <script src="./src/org/thinkit/web/js/pt.min.js"></script>
-    <script src="./src/org/thinkit/web/js/index.js"></script>
-    <script src="./src/org/thinkit/web/js/shootingStar.js"></script>
+    <script src="./src/js/relaxingWaves.js"></script>
+    <script src="./src/js/jquery.barfiller.js"></script>
+    <script src="./src/js/barFiller.js"></script>
+    <script src="./src/js/mindFiller.js"></script>
+    <script src="./src/js/portfolioFiller.js"></script>
+    <script src="./src/js/pt.min.js"></script>
+    <script src="./src/js/index.js"></script>
+    <script src="./src/js/shootingStar.js"></script>
   </body>
 </html>
