--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 
     <section id="bio" class="about me" name="bio">
       <div class="section-title">
-        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>About Me</h1>
       </div>
       <div class="container">
@@ -98,10 +97,6 @@
 
       <div class="container">
         <div class="section-title">
-          <div
-            class="header-divide-black-center mb-5 waypoint"
-            data-animation="slide-in-left"
-          ></div>
           <h1>Experience</h1>
         </div>
 
@@ -139,7 +134,6 @@
       <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="ffffff"></div>
 
       <div class="section-title">
-        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>Philosophy</h1>
       </div>
       <div class="container">
@@ -151,7 +145,6 @@
       <div class="relaxing-waves-container" wave-background="fff" wave-color="bfbfbf"></div>
 
       <div class="section-title">
-        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
         <h1>Gallery</h1>
       </div>
 
@@ -181,50 +174,42 @@
       <div class="relaxing-waves-container" wave-background="bfbfbf" wave-color="444957"></div>
 
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-xs-12">
-            <h6>Contact Me</h6>
-            <div class="header-divide-white"></div>
+        <h6>Contact Me</h6>
+        <div class="header-divide-white"></div>
 
-            <form
-              action="https://formspree.io/mwkrgkdv"
-              method="POST"
-              enctype="multipart/form-data"
-            >
-              <div class="form-group">
-                <input
-                  placeholder="Your email address"
-                  name="_replyto"
-                  type="email"
-                  class="form-control"
-                  id="form-control-email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  placeholder="Subject"
-                  name="_subject"
-                  type="text"
-                  class="form-control"
-                  id="form-control-title"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <textarea
-                  placeholder="Write message"
-                  name="name"
-                  class="form-control"
-                  id="form-control-textarea"
-                  rows="12"
-                  required
-                ></textarea>
-              </div>
-              <input type="submit" class="button-color-white float-right" value="SEND" />
-            </form>
+        <form action="https://formspree.io/mwkrgkdv" method="POST" enctype="multipart/form-data">
+          <div class="form-group">
+            <input
+              placeholder="Your email address"
+              name="_replyto"
+              type="email"
+              class="form-control"
+              id="form-control-email"
+              required
+            />
           </div>
-        </div>
+          <div class="form-group">
+            <input
+              placeholder="Subject"
+              name="_subject"
+              type="text"
+              class="form-control"
+              id="form-control-title"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <textarea
+              placeholder="Write message"
+              name="name"
+              class="form-control"
+              id="form-control-textarea"
+              rows="12"
+              required
+            ></textarea>
+          </div>
+          <input type="submit" class="button-color-white float-right" value="SEND" />
+        </form>
       </div>
     </section>
 
@@ -234,6 +219,10 @@
           <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a>
           <span>|</span>
           <a title="Twitter" href="https://twitter.com/ThinkitShinya" target="_blank">Twitter</a>
+          <span>|</span>
+          <a title="Medium" href="https://medium.com/@kato.shinya.dev" target="_blank">Medium</a>
+          <span>|</span>
+          <a title="Qiita" href="https://qiita.com/myConsciousness" target="_blank">Qiita</a>
         </div>
         <p>
           <span class="highlight-turquoise">Copyright 2022 Kato Shinya All Rights Reserved.</span>
