--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="description" content="This is the website of Kato Shinya, a software developer." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta property="og:title" content="ThinkIT" />
+    <meta property="og:title" content="Kato Shinya" />
     <meta
       property="og:description"
       content="This is the website of Kato Shinya, a software developer."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="ThinkIT" />
+    <meta property="og:site_name" content="Kato Shinya" />
 
     <title>Kato Shinya / 加藤 真也</title>
 
@@ -63,153 +63,6 @@
             <div class="page-link" destination="contact">contact</div>
           </div>
         </nav>
-      </div>
-    </section>
-
-    <section id="bio" class="about me" name="bio">
-      <div class="section-title">
-        <h1>About Me</h1>
-      </div>
-      <div class="container">
-        <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
-          <header>
-            <a href="https://github.com/myConsciousness">
-              <img src="./src/img/me.png" />
-            </a>
-
-            <h1>Kato Shinya</h1>
-            <h2>- Software Developer -</h2>
-          </header>
-
-          <div class="profile-bio">
-            <p>Hey what's up?</p>
-            <p class="text-center">
-              I'm an author and founder of Batch.dart. Experienced with many languages, and an
-              enthusiastic developer on Dart, Flutter, and Google Open Source.
-            </p>
-          </div>
-        </aside>
-      </div>
-    </section>
-
-    <section id="skill" name="skill">
-      <div class="relaxing-waves-container" wave-background="fff" wave-color="#f5f5f5"></div>
-
-      <div class="container">
-        <div class="section-title">
-          <h1>Experience</h1>
-        </div>
-
-        <div class="row mt-5">
-          <div class="col-md-6">
-            <div class="about-text waypoint" data-animation="slide-in-left">
-              <p>
-                I have been involved in the design and development of various web applications and
-                business improvement tools, mainly in Java. The skill graph is not the whole story
-                of my development, but these are main skills I have.<br /><br />
-                I have built a desktop app that uses Python for crawling and scraping. I also have
-                experience developing and releasing Android apps to the Play Store. Basically I
-                design and create Java-based web applications, but I am also interested in the
-                Python, Android fields and UI design.<br /><br />
-                <strong
-                  ><a
-                    href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
-                    target="_blank"
-                    >For a more detailed skill set, see here.</a
-                  ></strong
-                >
-              </p>
-            </div>
-          </div>
-          <div
-            id="skill-bars"
-            class="col-md-6 mt-5 mb-5 waypoint"
-            data-animation="slide-in-right"
-          ></div>
-        </div>
-      </div>
-    </section>
-
-    <section id="mind" name="mind">
-      <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="ffffff"></div>
-
-      <div class="section-title">
-        <h1>Philosophy</h1>
-      </div>
-      <div class="container">
-        <div id="mind-list" class="mt-5"></div>
-      </div>
-    </section>
-
-    <section id="portfolio" class="portfolio" name="portfolio">
-      <div class="relaxing-waves-container" wave-background="fff" wave-color="bfbfbf"></div>
-
-      <div class="section-title">
-        <h1>Gallery</h1>
-      </div>
-
-      <div class="filter-wrap waypoint mt-5" data-animation="fade-in">
-        <div class="flex flex-row">
-          <div class="filter" data-filter=".web">Web</div>
-          <div class="filter" data-filter=".android">Android</div>
-          <div class="filter" data-filter=".package">Package</div>
-          <div class="filter" data-filter="all">All</div>
-        </div>
-        <div class="float-bar">
-          <div class="flex flex-row">
-            <div class="filter" data-filter=".web">Web</div>
-            <div class="filter" data-filter=".android">Android</div>
-            <div class="filter" data-filter=".package">Package</div>
-            <div class="filter" data-filter="all">All</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="flex">
-        <div id="gallery" class="container flex flex-row flex-wrap waypoint"></div>
-      </div>
-    </section>
-
-    <section id="contact" name="contact">
-      <div class="relaxing-waves-container" wave-background="bfbfbf" wave-color="444957"></div>
-
-      <div class="container">
-        <h6>Contact Me</h6>
-        <div class="header-divide-white"></div>
-
-        <form action="https://formspree.io/mwkrgkdv" method="POST" enctype="multipart/form-data">
-          <div class="form-group">
-            <input
-              placeholder="Your email address"
-              name="_replyto"
-              type="email"
-              class="form-control"
-              id="form-control-email"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <input
-              placeholder="Subject"
-              name="_subject"
-              type="text"
-              class="form-control"
-              id="form-control-title"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <textarea
-              placeholder="Write message"
-              name="name"
-              class="form-control"
-              id="form-control-textarea"
-              rows="12"
-              required
-            ></textarea>
-          </div>
-          <input type="submit" class="button-color-white float-right" value="SEND" />
-        </form>
       </div>
     </section>
 
